# video-spark

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: __init__.py  config.py  dependencies.py  worker.py
app/auth/: __init__.py  supabase.py
app/db/: supabase.py
app/routes/: __init__.py  render.py
app/schemas/: render.py
app/services/: ffmpeg_svc.py  job_queue.py  launch.py  video_provider.py
app/tasks/: pipeline.py
app/tasks/steps/: captions.py  media.py  script.py  voice.py
backend/: .env.production.example  .gitignore  Dockerfile
backend/app/: config.py  main.py
backend/app/routes/: __init__.py  assets.py  projects.py  render.py
backend/app/schemas/: asset.py  project.py  render.py
backend/app/services/: assets.py  caption_presets.py  credits.py  (+7 more)
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_avatar_render.py  test_captions.py  test_health.py  test_image_provider.py  test_launch_config.py  test_pipeline.py  test_projects.py  test_render_features.py  test_storage.py  test_video_provider.py
deploy/ec2/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: github-ec2-lovable-rollout.md  lovable-integration-prompt.md
docs/postman/: videospark-mvp.postman_collection.json
scripts/: run-supabase-migration.mjs
supabase/migrations/: 202603180001_initial_schema.sql
supabase/seed/: 001_launch_seed.sql
tests/: conftest.py  test_captions.py  test_compose.py  test_credits.py  test_launch_config.py  test_pipeline.py  test_voice.py
(+9 files in other folders)
